--- a/VlimsApp/ClientApp/src/app/modules/manager/components/obsolute-grid/obsolute-grid.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/obsolute-grid/obsolute-grid.component.html
@@ -46,7 +46,9 @@
                 <th pSortableColumn="effectiveDateValue"style="width:80px">Effective Date<p-sortIcon field="effectiveDateValue"></p-sortIcon></th>
                 <th pSortableColumn="reviewDateValue" style="width:20%">Review Date<p-sortIcon field="reviewDateValue"></p-sortIcon></th>
                 <th pSortableColumn="entityName" style="width:80%">Preparation Type<p-sortIcon field="entityName"></p-sortIcon></th>
-                <th style="width:80%">Actions</th>
+                <!-- <th style="width:80%">Actions</th> -->
+                <th pSortableColumn="documentNo" style="width:80%">Revision No.<p-sortIcon field="documentNo" ></p-sortIcon></th>
+
                 <th style="width:80%">Preview</th>
               </tr>
             </ng-template>
@@ -61,9 +63,10 @@
                 <td>{{doc?.effectiveDateValue}}</td>
                 <td>{{ doc?.reviewDateValue}}</td>
                 <td>{{doc?.entityName}}</td>
-                <td class="text-center" *ngIf="access">
+                <td>{{doc?.revisionNumber}}</td>
+                <!-- <td class="text-center" *ngIf="access">
                   <i (click)="editdoc(doc)" class="bi bi-pencil"></i>
-                </td>
+                </td> -->
                 <td *ngIf="!access && doc?.entityName.toLowerCase=='existing document'">
                   <i class="bi bi-lock bi-lg"
                      [ngClass]="{'text-primary':true}"
