--- a/VlimsApp/ClientApp/src/app/common/audit-common-grid/audit-common-grid.component.html
+++ b/VlimsApp/ClientApp/src/app/common/audit-common-grid/audit-common-grid.component.html
@@ -1,82 +1,91 @@
-<div class="container-fluid">
-    <div class="row p-2">
-      <div class="col">
-        <div class="d-flex justify-content-between align-items-center">
-          <h4 class="page-title flex-grow-1">Obsolete Copies</h4>
-          <div class="back-icon" style="margin-right: 10px;">
-            <a href="javascript:void(0);" onclick="history.back();">
-              <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-            </a>
-          </div>
-  
-          <div class="d-flex page-title-actions">
-            <div class="input-group custom-input-group">
-              <!-- Magnifying glass icon -->
-              <span class="input-group-text custom-input-group-text">
-                <i class="fas fa-search custom-search-icon"></i>
-              </span>
-             
-            </div>
-  
-            <!--<button class="btn btn-primary mx-2" type="button" *ngIf="access">New</button>-->
-          </div>
-          
-        </div>
-      </div>
-    </div>
-    <div class="row p-2">
-      <div class="col">
-        <div class="p-4 bg-white shadow-dark rounded-2">
-         
-  
-        </div>
-      </div>
+<div class="row p-2">
+  <div class="col">
+    <div class="p-4 bg-white shadow-dark rounded-2">
+      <p-table #templatesTable
+               [value]="gridConfig?.gridData"
+               [globalFilterFields]="filterAttributes"
+               tableStyleClass="table table-striped"
+               [rows]="gridConfig?.Config?.itemsPerPage"
+               [paginator]="true"
+               [totalRecords]="100"
+               [rowsPerPageOptions]="gridConfig?.Config?.rowsPerPageOptions">
+
+        <ng-template pTemplate="header">
+          <tr>
+            <th>S.No</th>
+            <ng-container *ngFor="let header of gridConfig?.Headers">
+              <th pSortableColumn="{{header.Name}}" [style.width.%]="header.width">{{header.DisplayName}} <p-sortIcon *ngIf="header?.sort" field="{{header.Name}}"></p-sortIcon></th>
+            </ng-container>
+          </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-doc let-i="rowIndex">
+          <tr>
+            <td>{{ i + 1 }}</td>
+            <ng-container *ngFor="let header of gridConfig?.Headers">
+              <td *ngIf="header?.Name" class="text-center">
+                <ng-container *ngIf="header.isNavigation; else nonNavigation">
+                  <a href="javascript:void(0);" (click)="navigate(doc?.EntityInfo,doc?.Type)">
+                    {{ doc?.EntityInfo[header.Name] }}
+                  </a>
+                </ng-container>
+                <ng-template #nonNavigation>
+                  {{ doc?.EntityInfo[header.Name] }}
+                </ng-template>
+              </td>
+            </ng-container>
+          </tr>
+        </ng-template>
+
+      </p-table>
     </div>
   </div>
-  
+</div>
 
-  
-  <style>
-    /* Styles for .custom-input-group */
-    .custom-input-group {
-        background-color: white;
-        display: flex;
-        align-items: center;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
-    .custom-input-group-text {
-            background: white;
-            border: none;
-            padding: 0;
-            vertical-align: middle;
-        }
-  
-        .custom-search-icon {
-            font-size: 14px;
-            margin-right: 5px;
-            margin-left: 9px;
-            color: #555;
-        }
-  
-        .custom-input {
-            border: none;
-            padding: 5px;
-            vertical-align: middle;
-            background-color: white;
-            box-shadow: none;
-        }
-    .w-150 {
-      width: 150px;
-    }
-  
-    .p-paginator .p-dropdown {
-      height: unset;
-    }
-  
-    :host ::ng-deep .p-paginator .p-dropdown {
-      height: unset;
-      min-width: unset;
-    }
-    </style>
-  
+
+
+<style>
+  /* Styles for .custom-input-group */
+  .custom-input-group {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  .custom-input-group-text {
+    background: white;
+    border: none;
+    padding: 0;
+    vertical-align: middle;
+  }
+
+  .custom-search-icon {
+    font-size: 14px;
+    margin-right: 5px;
+    margin-left: 9px;
+    color: #555;
+  }
+
+  .custom-input {
+    border: none;
+    padding: 5px;
+    vertical-align: middle;
+    background-color: white;
+    box-shadow: none;
+  }
+
+  .w-150 {
+    width: 150px;
+  }
+
+  .p-paginator .p-dropdown {
+    height: unset;
+  }
+
+  :host ::ng-deep .p-paginator .p-dropdown {
+    height: unset;
+    min-width: unset;
+  }
+</style>
