--- a/VlimsApp/ClientApp/src/app/modules/documents/components/auditdocumenttypesgridpage/auditdocumenttypesgridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/auditdocumenttypesgridpage/auditdocumenttypesgridpage.component.html
@@ -9,64 +9,15 @@
                     <a href="javascript:void(0);" onclick="history.back();">
                         <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
                     </a>
-                </div>
-                
-                <div class="d-flex page-title-actions">
-                    <div class="input-group custom-input-group">
-                        <!-- Magnifying glass icon -->
-                        <span class="input-group-text custom-input-group-text">
-                            <i class="fas fa-search custom-search-icon"></i>
-                        </span>
-                        <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
-                    </div>
-                      
-                </div>
+                </div>              
+              
             </div>
         </div>
     </div>
-    <div class="row p-2">
-        <div class="col">
-            <div class="p-4 bg-white shadow-dark rounded-2">
-                <p-table #templatesTable [value]="types" 
-                [globalFilterFields]="['Unique', 'EntityName', 'UserName','CreatedDate']"
-                tableStyleClass="table table-striped"
-                [rows]="itemsPerPage"
-                [paginator]="true" 
-                [totalRecords]="types.length"
-                [rowsPerPageOptions]="rowsPerPageOptions"  
-                [rowHover]="true">
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th>S.No</th>
-                            <th pSortableColumn="Unique" style="width:20%">Document Type Prefix<p-sortIcon field="Unique"></p-sortIcon></th>
-                             <th pSortableColumn="EntityName" style="width:20%">Document Type Name<p-sortIcon field="EntityName"></p-sortIcon></th>
-                             <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
-                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
-                             <th pSortableColumn="UserName" style="width:20%">Initiated By<p-sortIcon field="UserName"></p-sortIcon></th>
-                              <th pSortableColumn="CreatedDate" style="width:1n00px">Initiated On<p-sortIcon field="CreatedDate"></p-sortIcon></th>
+    <ng-container *ngIf="gridConfig?.gridData?.length>0">
+      <app-audit-common-grid [gridConfig]="gridConfig" [filterAttributes]="globalFilterFields" (action)="handleAction($event)"></app-audit-common-grid>
+    </ng-container>
     
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-doc let-i="rowIndex">
-                        <tr>  
-                            <td>{{ i + 1 }}</td> 
-                            <td>
-                                <a [routerLink]="['/auditgridadd']" [queryParams]="{ DocumentName: doc?.EntityInfo?.documenttypeprefix }">{{doc?.Unique}}</a>
-                            </td>
-                
-                            <td>
-                                {{doc?.EntityName}}
-                            </td>
-                            <!-- <td>{{doc?.Message }}</td>
-                            <td>{{doc?.Type }}</td> -->
-                            <td>{{doc?.UserName}}</td>
-                            <td>{{ doc?.EntityInfo?.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
-        </div>
-    </div>
 </div>
 
 
