--- a/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>-->
-  <app-summary [gridConfig]="types" [module]="'master'" [entityName] ="'documentType'" [fieldsToShow] ="fieldsToShow" [filedsofActivity] ="filedsofActivity"></app-summary>
+  <app-summary [gridConfig]="types" [module]="'manager'" [entityName] ="'documentType'" [fieldsToShow] ="fieldsToShow" [filedsofActivity] ="filedsofActivity"></app-summary>
   <!--<div class="row mt-3">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
