--- a/VlimsApp/ClientApp/src/app/common/summary/summary.component.html
+++ b/VlimsApp/ClientApp/src/app/common/summary/summary.component.html
@@ -19,10 +19,16 @@
         <p-panel class=" col-lg-5" header="Revision {{item.RevisionNumber}}" [toggleable]="true">
           <div class="d-flex flex-column py-3 px-4">
             <ng-container *ngFor="let field of fieldsToShow">
-              <div class="form-group row">
+              <div class="form-group row" *ngIf="field.key != 'reviewers' && field.key != 'approvals' ">
                 <label for="{{ field.key }}" class="col-md-5">{{ field.label }}</label>
                 <div class="col-lg-7">
                   <span>{{ item.EntityInfo[field.key] }}</span>
+                </div>
+              </div>
+              <div class="form-group row" *ngIf="field.key.toLowerCase() == 'reviewers' || field.key.toLowerCase() == 'approvals' ">
+                <label for="{{ field.key[0].UserID }}" class="col-md-5">{{ field.label }}</label>
+                <div class="col-lg-7">
+                  <span>{{ item.EntityInfo[field.key][0].UserID }}</span>
                 </div>
               </div>
             </ng-container>
